--- a/public/embedJS/herobg.html
+++ b/public/embedJS/herobg.html
@@ -51,12 +51,13 @@
           baseX: Math.random() * canvas.width, // Initial base position
           baseY: Math.random() * canvas.height, // Initial base position
           depth: depth,
+          baseStartAngle: Math.random() * Math.PI * 2, // Initial base start angle
           startAngle: Math.random() * Math.PI * 2,
           endAngle: Math.random() * Math.PI * 2,
-          lineWidth: Math.random() * 3 ** 3 + 10,
+          lineWidth: Math.random() * 4 ** 3 + 20,
           //strokStyle: `rgba`
           color: `${Math.random() * 200 + 0}, ${Math.random() * 200 + 0}, ${
-            Math.random() * 200 + 50
+            Math.random() * 200
           }`,
           size: (depth / maxDepth) * Math.random() * 6 ** 3 + 0,
         });
@@ -74,13 +75,19 @@
         particles.forEach((p) => {
           //const size = (1 - p.depth / maxDepth) * 5 + 1;
           //const size = (p.depth / maxDepth) * 1 + 30;
+          if (p.startAngle - p.endAngle > Math.PI * 2 - 0.2) {
+            p.endAngle = Math.PI * 2;
+          }
           ctx.beginPath();
           ctx.arc(p.x, p.y, p.size, p.startAngle, p.endAngle);
           //ctx.fillStyle = `rgba(111, 125, 140, ${1 - p.depth / maxDepth})`;
           //ctx.fill();
           //ctx.strokeStyle = `rgba(111, 125, 140, ${1 - (p.depth / maxDepth) * 1})`;
-          ctx.strokeStyle = `rgba(${p.color}, ${
+          /* ctx.strokeStyle = `rgba(${p.color}, ${
             1 - (p.depth / maxDepth) * 0.5
+          })`; */
+          ctx.strokeStyle = `rgba(${p.color}, ${
+            1.3 - (p.depth / maxDepth) * 1
           })`;
           ctx.lineWidth = p.lineWidth || 1;
           ctx.stroke();
@@ -102,9 +109,13 @@
         const centerY = canvas.height / 2;
         particles.forEach((p, index) => {
           const displacementX =
-            (mouseX - centerX) * (1 - (p.depth / maxDepth) * 1) * 0.03;
+            (mouseX - centerX) * (1 - (p.depth / maxDepth) * 3) * 0.02;
           const displacementY =
-            (mouseY - centerY) * (1 - (p.depth / maxDepth) * 2) * 0.6;
+            (mouseY - centerY) * (1 - (p.depth / maxDepth) * 3) * 0.06;
+          p.startAngle =
+            p.baseStartAngle +
+            (mouseX - centerX) * 0.003 +
+            (mouseY - centerY) * 0.003;
           p.x = p.baseX + displacementX;
           p.y = p.baseY + displacementY;
           /* console.log(
